# jarp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  GenerateProjectFiles.bat  GenerateProjectFiles.sh  GenerateProjectFiles_VS2017.bat  GenerateProjectFiles_VS2019.bat  README.md  jarp.sln  premake5.lua
Dependencies/stb/: stb_image.h
Game/: CMakeLists.txt
Game/Source/: game.c  game.h
Sandbox/: CMakeLists.txt
Sandbox/Shaders/: Shader.frag.glsl  Shader.vert.glsl
Sandbox/Source/: SandboxApplication.cpp
Sandbox/Source/Sandbox/: sandbox.c  sandbox.h
jarp/: CMakeLists.txt  jarp.vcxproj  jarp.vcxproj.filters
jarp/Shader/: Basic.frag  Basic.vert.glsl
jarp/Shaders/: Phong.frag  Phong.frag.glsl  Phong.frag.spv  Phong.vert  Phong.vert.glsl  Phong.vert.spv  Shader.frag  Shader.frag.glsl  Shader.frag.spv  Shader.vert  Shader.vert.glsl  Shader.vert.spv  compile.bat  frag.spv
jarp/Source/: Camera.cpp  Camera.h  CrossPlatformWindow.cpp  CrossPlatformWindow.h  Model.cpp  Model.h  Texture.cpp  Texture.h  Utils.hpp  api_types.h  file.h  fps_counter.c  fps_counter.h  input.c  input.h  jarp.h  jarppch.cpp  jarppch.h  keys.h  log.c  log.h  main.c  main.cpp  math.h  mesh.h  window.c  window.h
jarp/Source/Input/: InputHandler.cpp  InputHandler.h
jarp/Source/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
jarp/Source/Platform/VulkanRHI/: CommandBufferPool.cpp  CommandBufferPool.h  Model.cpp  Model.h  TempVulkanApplication.cpp  TempVulkanApplication.h  Texture.cpp  Texture.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanContext.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.cpp  VulkanFence.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImage.cpp  VulkanImage.h  VulkanImageView.cpp  VulkanImageView.h  VulkanInstance.cpp  VulkanInstance.h  VulkanQueue.cpp  VulkanQueue.h  VulkanRenderPass.cpp  (+12 more)
jarp/Source/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
jarp/Source/VulkanRHI/: Model.cpp  Model.h  Texture.cpp  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImage.cpp  VulkanImage.h  VulkanImageView.h  VulkanInstance.cpp  VulkanInstance.h  VulkanQueue.cpp  VulkanQueue.h  VulkanRenderPass.cpp  VulkanSemaphore.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h
jarp/Source/input/: buttons.h  input.c  keys.h
jarp/Source/jarp/: Application.cpp  Application.h  Camera.cpp  Camera.h  Core.h  EntryPoint.cpp  EntryPoint.hpp  Log.cpp  Log.h  Time.h  Timer.cpp  Timer.h  Utils.hpp  Window.h  api_types.h  file.c  file.h  fps_counter.c  fps_counter.h  log.c  log.h  main.c  main.cpp  math.h  mesh.h  module.c  module.h  platform.h  shared.h  window.c  window.h
jarp/Source/jarp/Events/: ApplicationEvent.h  Event.h  EventBus.cpp  EventBus.h  EventListener.h  KeyEvent.h  MouseEvent.h
jarp/Source/jarp/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
jarp/Source/jarp/Input/: Command.cpp  Command.h  InputHandler.cpp  InputHandler.h
jarp/Source/jarp/Renderer/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  IndexBuffer.cpp  IndexBuffer.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Swapchain.h  VertexBuffer.cpp  VertexBuffer.h  VertexComponent.h
jarp/Source/jarp/input/: buttons.h  input.c  input.h  keys.h
jarp/Source/jarp/math/: mat4.h  math.h  vec2.h  vec3.h
jarp/Source/jarp/platform/: win32_main.c  win32_main.h
jarp/Source/jarp/platform/win32/: win32_main.c  win32_main.h
jarp/Source/jarp/renderer/: camera.c  camera.h  texture.c  texture.h
jarp/Source/jarp/renderer/vulkan/: vk_renderer.c  vk_renderer.h
lib/: CMakeLists.txt
lib/SDL2/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm/: CMakeLists.txt
lib/spdlog/: CMakeLists.txt
shaders/: basic.frag  basic.frag.glsl  basic.vert  basic.vert.glsl
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  FileSystem.cpp  FileSystem.h  ImGuiBuilder.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VersionConfig.h.in  Win32Window.cpp  Win32Window.h  Window.h  log.cpp  log.h  main.cpp  renderer.cpp  renderer.h
src/event/: Event.h  EventBus.cpp  EventBus.h
